<resources>
    <string name="app_name">ColorMyView</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="how_to_play">How to play :</string>
    <string name="tap_the_boxes_and_button">Tap the screen and buttons.</string>
    <string name="red">RED</string>
    <string name="yellow">Yellow</string>
    <string name="green">GREEN</string>
    <string name="reset">RESET</string>
</resources>
