<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_box_one"
        style="@style/whiteBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_16"
        android:layout_marginTop="@dimen/_16"
        android:layout_marginRight="@dimen/_16"
        android:layout_marginBottom="@dimen/_16"
        android:fontFamily="@font/roboto_thin"
        android:text="@string/box_one"
        android:textSize="@dimen/_24f"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_box_two"
        style="@style/whiteBox"
        android:layout_width="@dimen/_130"
        android:layout_height="@dimen/_130"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/box_two"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_box_one" />

    <TextView
        android:id="@+id/tv_box_three"
        style="@style/whiteBox"
        android:layout_width="@dimen/_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16"
        android:layout_marginEnd="@dimen/_16"
        android:text="@string/box_three"
        app:layout_constraintBottom_toTopOf="@+id/tv_box_four"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_box_two"
        app:layout_constraintTop_toTopOf="@+id/tv_box_two" />

    <TextView
        android:id="@+id/tv_box_four"
        style="@style/whiteBox"
        android:layout_width="@dimen/_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16"
        android:layout_marginEnd="@dimen/_16"
        android:text="@string/box_four"
        app:layout_constraintBottom_toTopOf="@+id/tv_box_five"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_box_two"
        app:layout_constraintTop_toBottomOf="@+id/tv_box_three" />

    <TextView
        android:id="@+id/tv_box_five"
        style="@style/whiteBox"
        android:layout_width="@dimen/_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16"
        android:layout_marginEnd="@dimen/_16"
        android:text="@string/box_five"
        app:layout_constraintBottom_toBottomOf="@+id/tv_box_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_box_two"
        app:layout_constraintTop_toBottomOf="@+id/tv_box_four" />

    <TextView
        android:id="@+id/tv_how_to_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/roboto_thin"
        android:text="@string/how_to_play"
        android:textAlignment="viewStart"
        android:textSize="@dimen/_24f"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_info"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="@dimen/_0"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_thin"
        android:text="@string/tap_the_boxes_and_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_how_to_play"
        app:layout_constraintTop_toBottomOf="@+id/tv_box_two"
        app:layout_constraintVertical_bias="0.093" />

    <Button
        android:id="@+id/btn_red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@android:color/darker_gray"
        android:text="@string/red"
        app:layout_constraintBottom_toBottomOf="@+id/btn_yellow"
        app:layout_constraintEnd_toStartOf="@+id/btn_yellow"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_yellow" />

    <Button
        android:id="@+id/btn_yellow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/darker_gray"
        android:text="@string/yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_green"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_red"
        app:layout_constraintTop_toBottomOf="@+id/tv_info"
        app:layout_constraintVertical_bias="0.219" />

    <Button
        android:id="@+id/btn_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@android:color/darker_gray"
        android:text="@string/green"
        app:layout_constraintBottom_toBottomOf="@+id/btn_yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_yellow"
        app:layout_constraintTop_toTopOf="@+id/btn_yellow" />

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="@dimen/_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_yellow" />

</androidx.constraintlayout.widget.ConstraintLayout>